# Skald

./: .gitignore  CLAUDE.md  PRIVACY.md  README.md  crop_icon.py  linux-roadmap.md  package.json  pnpm-lock.yaml  test_audio_run.mjs  vite.config.ts
.claude/: settings.local.json
Vault/Skald/: Audiobook-Focused EQ Presets.md  Playlist Implementation Roadmap.md  Remaining bugs and fixes.md  SKALD CODEBASE DUPLICATION AUDIT REPORT.md  Skald Live sync Roadmap.md  Skald Roadmap.md  Skald vs. Audiobookshelf WebUI — Feature Gap Analysis.md  Untitled.md  Useful commands.md
Vault/Skald/.obsidian/: workspace.json
_reference/source/: Skald App.html  books.jsx
_reference/source/app/: app.jsx  browse.jsx  player.jsx  settings.jsx  state.jsx
design-handoff/: README.md
design-handoff/Greeting page/: Greeting Page - greeting.jsx  Greeting Page -Greeting Preview.html  Greeting Page -README.md
design-handoff/design_handoff_saga_login/: Saga Login Preview.html  Skald Login - README.md
design-handoff/design_handoff_saga_login/source/login/: Skald Login - saga.jsx  Skald Login - tokens.jsx
design-handoff/design_handoff_saga_login/source/reference/: Skald Login - chrome.jsx  Skald Login - icons.jsx
design-handoff/metadata_match/: Skald Match - Metadata Match B.html  Skald Match - README.md  Skald Match - match-wash.jsx  Skald Match - option-b.jsx  Skald Match - shared.jsx
design-handoff/source/app/: library.jsx
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  remove_bg.py
src-tauri/msix/: AppxManifest.xml  README.md  build-msix.ps1  github-workflow-msix.yml
src-tauri/src/: api.rs  audio.rs  auth.rs  catalog.rs  commands.rs  cover_cache.rs  downloads.rs  eq.rs  ingest.rs  lib.rs  main.rs  models.rs  paths.rs  scanner.rs  session.rs  socket.rs
src-tauri/vlc-lib/: vlc.def  vlc.exp  vlc.lib
src-tauri/windows/: hooks.nsh
src/api/: abs.ts  playbook.ts  reviewCache.ts
src/components/: CollectionPicker.tsx  ContextMenu.tsx  Cover.tsx  CoverPicker.tsx  FocusPanel.tsx  Icon.tsx  MatchModal.tsx  MetadataEditor.tsx  PickItUp.tsx  PlaylistPicker.tsx  ShareModal.tsx  UnidentifiedNotice.tsx
src/components/chrome/: DeviceSelector.tsx  Glass.tsx  OnyxWash.tsx  Titlebar.tsx  TopNav.tsx  VolumeControl.tsx
src/components/downloads/: DownloadProgressToast.tsx
src/components/greeting/: GreetingPane.tsx
src/components/onboarding/: AbsConnectStep.tsx  AbsFoldersStep.tsx  AddBooksStep.tsx  ChoosePathStep.tsx  CreateLocalStep.tsx  DoneStep.tsx  WelcomeStep.tsx  frame.tsx
src/components/player/: MiniPlayer.tsx
src/components/podcast/: PodcastBrowse.tsx  PodcastDownloadModal.tsx  PodcastFindEpisodesModal.tsx  PodcastSettingsModal.tsx  PodcastSubscribeModal.tsx  buildPodcastContextMenu.ts
src/components/settings/: AboutSection.tsx  AccountSection.tsx  AppearanceSection.tsx  AudioSection.tsx  BackupSection.tsx  CronEditor.tsx  DownloadsSection.tsx  Dropdown.tsx  IntegrationsSection.tsx  KeyboardSection.tsx  LibrariesSection.tsx  LibrarySection.tsx  ListeningSessionsSection.tsx  LocalLibrarySection.tsx  LogsSection.tsx  NotificationsSection.tsx  PlaybackSection.tsx  ScheduledTasksSection.tsx  ServerSection.tsx  ServerSettingsSection.tsx  SharingSection.tsx  SyncSection.tsx  index.ts
src/components/shelf/: BrowseTile.tsx  BrowseView.tsx  FilesModal.tsx  FilterPopover.tsx  LibraryShelf.tsx  ShelfHeader.tsx  TileMini.tsx  buildItemContextMenu.ts
src/components/shelf/tabs/: AuthorsView.tsx  CollectionsView.tsx  GenresView.tsx  NarratorsView.tsx  PlaylistsView.tsx  PublishersView.tsx  SeriesView.tsx  index.ts
src/components/ui/: ConfirmDialog.tsx  Toast.tsx
src/hooks/: useGlobalShortcuts.ts
src/lib/: coverBust.ts  playbackPrefs.ts  podcastCover.ts  series.ts  shareTracker.ts  shelfFilters.ts
src/screens/: Home.tsx  Library.tsx  Login.tsx  Onboarding.tsx  Player.tsx  PodcastDetail.tsx  Settings.tsx
src/state/: onyx.ts  theme.ts
