[package]
name = "skald"
version = "0.0.0"
description = "A native audiobook client for Audiobookshelf"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "skald_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] } # "stream" needed for bytes_stream() in download_item
tokio = { version = "1", features = ["full"] }
keyring = { version = "3", features = ["windows-native"] }
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
vlc-rs = "0.3"
tauri-plugin-global-shortcut = "2.3.2"
# Socket.IO client — async feature pulls in the tokio-backed async runtime.
# Used in socket.rs for the live sync WebSocket transport (Phase B+).
rust_socketio = { version = "0.6", features = ["async"] }
# Required for .boxed() on async blocks in rust_socketio callbacks
futures-util = "0.3"
# CancellationToken — used in download_item to support user-initiated cancel.
# CancellationToken lives in the "rt" feature, not "sync".
tokio-util = { version = "0.7", features = ["rt"] }
# zip: extract downloaded audiobook archives from the ABS server.
# deflate is the compression codec ABS uses; bzip2/zstd are not needed.
zip = { version = "2", default-features = false, features = ["deflate"] }
# Used temporarily in connect_socket to decode JWT payload for expiry diagnostics
base64 = "0.21"

