[package]
name = "skald"
version = "0.0.0"
description = "A native audiobook client for Audiobookshelf"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "skald_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "multipart"] } # "stream" for download_item; "multipart" for cover upload
tokio = { version = "1", features = ["full"] }
keyring = { version = "3", features = ["windows-native"] }
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
vlc-rs = "0.3"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-dialog = "2"
# Unified diagnostic logging — Rust `log::*` macros + the frontend
# @tauri-apps/plugin-log API both write to one rotated file (app_log_dir) plus
# stdout. The `log` facade crate provides the info!/warn!/error! macros.
tauri-plugin-log = "2"
log = "0.4"
# Socket.IO client — async feature pulls in the tokio-backed async runtime.
# Used in socket.rs for the live sync WebSocket transport (Phase B+).
rust_socketio = { version = "0.6", features = ["async"] }
# Required for .boxed() on async blocks in rust_socketio callbacks
futures-util = "0.3"
# CancellationToken — used in download_item to support user-initiated cancel.
# CancellationToken lives in the "rt" feature, not "sync".
tokio-util = { version = "0.7", features = ["rt"] }
# zip: extract downloaded audiobook archives from the ABS server.
# deflate is the compression codec ABS uses; bzip2/zstd are not needed.
zip = { version = "2", default-features = false, features = ["deflate"] }
# Used temporarily in connect_socket to decode JWT payload for expiry diagnostics
base64 = "0.21"

# ── Local library: scanner / catalog / ingest / providers ────────────────────
# (Local Library & Split Libraries roadmap.) Added together so the dependency
# fetch is a single rebuild even though the modules land across several phases.
# rusqlite: local catalog DB (items, progress, sessions, bookmarks, collections,
# playlists). "bundled" compiles SQLite in-tree so no system sqlite3 is required.
rusqlite = { version = "0.31", features = ["bundled"] }
# lofty: read embedded audio tags, cover art, (and where available) chapters
# across ID3v2 / MP4·M4B / Vorbis. The scanner's primary metadata source.
lofty = "0.21"
# symphonia: pure-Rust format probe / duration fallback when tags lack it.
symphonia = { version = "0.5", features = ["all"] }
# walkdir: recursive directory traversal for the scanner.
walkdir = "2"
# notify: file-system watcher for the staging folder (Phase 7).
notify = "6"
# image: decode + resize embedded/sidecar cover art locally (no server resizer; Phase 8).
image = "0.25"

